; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwmon/extr_lm90.c_temp_to_s8.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwmon/extr_lm90.c_temp_to_s8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @temp_to_s8 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @temp_to_s8(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = icmp sle i64 %4, -128000
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 -128, i32* %2, align 4
  br label %24

7:                                                ; preds = %1
  %8 = load i64, i64* %3, align 8
  %9 = icmp sge i64 %8, 127000
  br i1 %9, label %10, label %11

10:                                               ; preds = %7
  store i32 127, i32* %2, align 4
  br label %24

11:                                               ; preds = %7
  %12 = load i64, i64* %3, align 8
  %13 = icmp slt i64 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %11
  %15 = load i64, i64* %3, align 8
  %16 = sub nsw i64 %15, 500
  %17 = sdiv i64 %16, 1000
  %18 = trunc i64 %17 to i32
  store i32 %18, i32* %2, align 4
  br label %24

19:                                               ; preds = %11
  %20 = load i64, i64* %3, align 8
  %21 = add nsw i64 %20, 500
  %22 = sdiv i64 %21, 1000
  %23 = trunc i64 %22 to i32
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %19, %14, %10, %6
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
